--- a/org.eclipse.example.e4.commands/css/e4_classic_winxp.css
+++ b/org.eclipse.example.e4.commands/css/e4_classic_winxp.css
@@ -6,16 +6,23 @@
 }
 
 .MPartStack {
-  tab-renderer: null;
-  selected-tabs-background: #FFFFFF #ECE9D8 100%;
-  simple: false;
+  swt-tab-renderer: null;
+  swt-selected-tabs-background: #FFFFFF #ECE9D8 100%;
+  swt-simple: false;
+  swt-mru-visible: true;
 }
 
 
 .MPartStack.active {
-  selected-tabs-background: #E5EDFC #99BAF3 100%;
+  swt-selected-tabs-background: #E5EDFC #99BAF3 100%;
 }
 
 #PerspectiveSwitcher  {
-	perspective-keyline-color: #ECE9D8 #FFFFFF;
+	eclipse-perspective-keyline-color: #ECE9D8 #FFFFFF;
+}
+
+.MToolControl.TrimStack {
+	frame-image:  url(./winXPTSFrame.PNG);
+	handle-image:  url(./winXPHandle.PNG);
+	frame-cuts: 5px 1px 5px 16px;
 }
