--- a/org.eclipse.example.e4.commands/css/e4_default_mac.css
+++ b/org.eclipse.example.e4.commands/css/e4_default_mac.css
@@ -1,26 +1,13 @@
+@import url("e4_basestyle.css");
 
 .MTrimmedWindow { 
     background-color: #E8E8E8;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 2px;
-    margin-right: 2px;
-}
-
-.MTrimmedWindow.topLevel { 
-    margin-top: 24px;
-    margin-bottom: 2px;
-    margin-left: 12px;
-    margin-right: 12px;
 }
 
 .MPartStack {
-    tab-renderer: url('platform:/plugin/org.eclipse.e4.ui.workbench.renderers.swt/org.eclipse.e4.ui.workbench.renderers.swt.CTabRendering');
-    unselected-tabs-color: #FFFFFF #FFFFFF #FFFFFF 100% 100%;
-    outer-keyline-color: #FFFFFF;
-	inner-keyline-color: #FFFFFF;
 	font-size: 12;
-	simple: false;
+	swt-simple: false;
+	swt-mru-visible: false;
 }
 
 .MTrimBar {
@@ -32,13 +19,30 @@
 }
 
 .MPartStack.active {
-	unselected-tabs-color: #F6F6F6 #D3D3D3 #D1D1D1 #D1D1D1 #D6D6D6 #D6D6D6 #FFFFFF 20% 45% 60% 70% 100% 100%;
-    outer-keyline-color: #C4C5C1;
-	inner-keyline-color: #FFFFFF;
-	tab-outline: #B6BCCC;
+	swt-unselected-tabs-color: #F6F6F6 #D3D3D3 #D1D1D1 #D1D1D1 #D6D6D6 #D6D6D6 #FFFFFF 20% 45% 60% 70% 100% 100%;
+    swt-outer-keyline-color: #C4C5C1;
 }
 
 #PerspectiveSwitcher {
 	background-color: #F0F0F0 #E8E8E8 100%;
-	perspective-keyline-color: #515151 #515151;
+	eclipse-perspective-keyline-color: #515151 #515151;
+}
+
+#org-eclipse-ui-editorss {
+   swt-tab-renderer: url('bundleclass://org.eclipse.e4.ui.workbench.renderers.swt/org.eclipse.e4.ui.workbench.renderers.swt.CTabRendering');
+   swt-unselected-tabs-color: #D6DDE5 #D6DDE5 #D6DDE5 100% 100%;
+   swt-outer-keyline-color: #D6DDE5;
+   swt-inner-keyline-color: #D6DDE5;
+   swt-tab-outline: #D6DDE5;
+   color: #D6DDE5;
+   swt-tab-height: 8px;
+   padding: 0px 5px 7px;
+}
+
+CTabFolder.MArea .MPartStack, CTabFolder.MArea .MPartStack.active {
+   swt-shadow-visible: false;
+}
+
+CTabFolder Canvas {
+  background-color: #F0F0F0;
 }
