--- a/org.eclipse.example.e4.commands/css/e4_default_win7.css
+++ b/org.eclipse.example.e4.commands/css/e4_default_win7.css
@@ -1,27 +1,14 @@
+@import url("e4_basestyle.css");
 
 .MTrimmedWindow { 
     background-color: #E1E6F6; 
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 2px;
-    margin-right: 2px;
-}
-
-.MTrimmedWindow.topLevel { 
-    margin-top: 24px;
-    margin-bottom: 2px;
-    margin-left: 12px;
-    margin-right: 12px;
 }
 
 .MPartStack {
-    tab-renderer: url('platform:/plugin/org.eclipse.e4.ui.workbench.renderers.swt/org.eclipse.e4.ui.workbench.renderers.swt.CTabRendering');
-    unselected-tabs-color: #FFFFFF #FFFFFF #FFFFFF 100% 100%;
-    outer-keyline-color: #FFFFFF;
-	inner-keyline-color: #FFFFFF;
 	font-size: 9;
 	font-family: 'Segoe UI';
-	simple: true;
+	swt-simple: true;
+	swt-mru-visible: false;
 }
 
 .MTrimBar {
@@ -33,13 +20,29 @@
 }
 
 .MPartStack.active {
-	unselected-tabs-color: #F3F9FF #D0DFEE #CEDDED #CEDDED #D2E1F0 #D2E1F0 #FFFFFF 20% 45% 60% 70% 100% 100%;
-    outer-keyline-color: #B6BCCC;
-	inner-keyline-color: #FFFFFF;
-	tab-outline: #B6BCCC;
+	swt-unselected-tabs-color: #F3F9FF #D0DFEE #CEDDED #CEDDED #D2E1F0 #D2E1F0 #FFFFFF 20% 45% 60% 70% 100% 100%;
+	swt-outer-keyline-color: #B6BCCC;
 }
 
 #PerspectiveSwitcher  {
 	background-color: #F5F7FC #E1E6F6 100%;
-	perspective-keyline-color: #AAB0BF #AAB0BF;
+}
+
+#org-eclipse-ui-editorss {
+   swt-tab-renderer: url('bundleclass://org.eclipse.e4.ui.workbench.renderers.swt/org.eclipse.e4.ui.workbench.renderers.swt.CTabRendering');
+   swt-unselected-tabs-color: #F0F0F0 #F0F0F0 #F0F0F0 100% 100%;
+   swt-outer-keyline-color: #B4B4B4;
+   swt-inner-keyline-color: #F0F0F0;
+   swt-tab-outline: #F0F0F0;
+   color: #F0F0F0;
+   swt-tab-height: 8px;
+   padding: 0px 5px 7px;
+}
+
+CTabFolder.MArea .MPartStack, CTabFolder.MArea .MPartStack.active {
+   swt-shadow-visible: false;
+}
+
+CTabFolder Canvas {
+  background-color: #F8F8F8;
 }
